[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-cost"
version = "0.2.0"
description = "Live terminal dashboard for tracking Claude Code usage and costs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["claude", "anthropic", "ai", "usage", "dashboard", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/mohsinahad/claude-cost"
Repository = "https://github.com/mohsinahad/claude-cost"

[project.scripts]
claude-cost = "claude_dashboard:main"

[tool.setuptools]
py-modules = ["claude_dashboard"]
